exec_program(cp ARGS ${CMAKE_CURRENT_SOURCE_DIR}/*.h ${INCLUDE_OUTPUT_PATH})
aux_source_directory(. SIRIUS_LIB_SUFFIXTREE_SRC_DIR)
add_library(sirius_suffixtree_static ${SIRIUS_LIB_SUFFIXTREE_SRC_DIR})
add_library(sirius_suffixtree SHARED ${SIRIUS_LIB_SUFFIXTREE_SRC_DIR})
target_link_libraries(sirius_suffixtree sirius_base)
set_target_properties(sirius_suffixtree_static PROPERTIES OUTPUT_NAME "sirius_suffixtree")
set_target_properties(sirius_suffixtree PROPERTIES CLEAN_DIRECT_OUTPUT 1) 
set_target_properties(sirius_suffixtree_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
set_target_properties(sirius_suffixtree PROPERTIES VERSION ${LIB_SIRIUS_BASE_VERSION} SOVERSION ${LIB_SIRIUS_BASE_API_VERSION})
add_dependencies(sirius_suffixtree_static sirius_base sirius_base_static)
add_dependencies(sirius_suffixtree sirius_base sirius_base_static)
